@@ -3,6 +3,7 @@ package net.mrscauthd.beyond_earth.datagen.provider;
 import com.google.common.collect.ImmutableList;
 import com.mojang.datafixers.util.Pair;
 import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.*;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.storage.loot.LootTable;
@@ -15,26 +16,17 @@ import net.mrscauthd.beyond_earth.datagen.loot.EntityLootTables;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 
-public class ModLootTableProvider extends LootTableProvider {
+public class ModLootTableProvider {
 
-    public ModLootTableProvider(DataGenerator generator) {
-        super(generator);
-    }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return ImmutableList.of(
-                Pair.of(BlockLootTables::new, LootContextParamSets.BLOCK),
-                Pair.of(EntityLootTables::new, LootContextParamSets.ENTITY),
-                Pair.of(ChestLootTables::new, LootContextParamSets.CHEST));
-    }
-
-    @Override
-    protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext context) {
-
+    public static LootTableProvider create(PackOutput output) {
+        return new LootTableProvider(output, Set.of(),
+                List.of(new LootTableProvider.SubProviderEntry(BlockLootTables::new, LootContextParamSets.BLOCK),
+                new LootTableProvider.SubProviderEntry(EntityLootTables::new, LootContextParamSets.ENTITY),
+                new LootTableProvider.SubProviderEntry(ChestLootTables::new, LootContextParamSets.CHEST)));
     }
 }
